# vardorvis

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  poetry.toml  pyproject.toml  vardorvis.py
.github/workflows/: build-and-release.yml
vardorvis_cli/: __init__.py  vardorvis_cli.py
vardorvis_cmd/: vardorvis_cmd.py
