[project]
name = "vardorvis-cmd"
version = "0.1.0"
description = "custom command line interface"
authors = [
    {name = "rhymenaucerous",email = "christopher.r.elliott94@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cmd2 (>=2.6.1,<3.0.0)",
    "termcolor (>=3.1.0,<4.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "datetime (>=5.5,<6.0)"
]

[project.scripts]
vard = "vardorvis_cmd.vardorvis_cmd:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

