[project]
name = "vardorvis-cmd"
version = "0.1.0"
description = "custom command line interface"
authors = [
    {name = "rhymenaucerous",email = "christopher.r.elliott94@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cmd2 (>=2.6.1,<3.0.0)",
    "termcolor (>=3.1.0,<4.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "datetime (>=5.5,<6.0)"
]

[project.scripts]
vard = "vardorvis_cmd.vardorvis_cmd:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.3.7"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[tool.pylint.messages_control]
disable = []

[tool.pylint.format]
max-line-length = 88
indent-string = "    "

[tool.pylint.reports]
output-format = "text"
reports = false

[tool.pylint.basic]
bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata"]
include-naming-hint = false

[tool.pylint.miscellaneous]
notes = ["FIXME", "XXX", "TODO"]

[tool.pylint.master]
ignore = ["CVS"]
persistent = true
load-plugins = []
